# CPP-Simple-Calculator

./: CMakeLists.txt  Calculator.cpp  Calculator.h  main.cpp
